Fixed header spacing for employee resources

--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -49,7 +49,6 @@
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     padding-top: 2rem;
     padding-bottom: 1.5rem;
-    /*margin-left: 10px;*/
 }
 
 .header-intranet-style {
@@ -58,7 +57,7 @@
     color: #FFFFFF;
     font-family: "Helvetica";
     font-size: 30px;
-    letter-spacing: 5.1px;
+    letter-spacing: 5px;
     line-height: 65px;
     margin-left: 2px;
     margin-top: 10.0rem;
@@ -146,6 +145,10 @@
 .blue-nav-dropdown.dropdown-menu {
     width: 19em;
     border-top: 1rem solid #F9B52B;
+}
+
+.blue-nav-dropdown.dropdown-menu.employee-resources-dropdown > li > a:hover{
+    width: auto;
 }
 
 .blue-nav-dropdown.dropdown-menu > li > a {
